Did some corrections in the image links

--- a/natours-project/index.html
+++ b/natours-project/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Natours</title>
 
-    <link rel="stylesheet" href="/css/icon-font.css">
+    <link rel="stylesheet" href="/natours-project/css/icon-font.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/natours-project/images/favicon.png">
 
 </head>
 <body>
@@ -51,9 +51,9 @@
                 </div>
                 <div class="col-1-of-2">
                     <div class="composition">
-                        <img src="images/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
-                        <img src="images/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
-                        <img src="images/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                        <img src="/natours-project/images/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                        <img src="/natours-project/images/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                        <img src="/natours-project/images/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
                     </div>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$297</p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book now</a>
+                                <a href="#" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$497</p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book now</a>
+                                <a href="#" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -190,7 +190,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$897</p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book now</a>
+                                <a href="#" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -205,8 +205,8 @@
         <section class="section-stories">
             <div class="bg-video">
                 <video class="bg-video__content" autoplay muted loop>
-                    <source src="/images/video.mp4" type="video/mp4">
-                    <source src="/images/video.webm" type="video/webm">
+                    <source src="/natours-project/images/video.mp4" type="video/mp4">
+                    <source src="/natours-project/images/video.webm" type="video/webm">
                     Your browser is not supported!
                 </video>
             </div>
@@ -219,7 +219,7 @@
             <div class="row">
                 <div class="story">
                     <figure class="story__shape">
-                        <img src="/images/nat-8.jpg" alt="Person on a tour" class="story__img">
+                        <img src="/natours-project/images/nat-8.jpg" alt="Person on a tour" class="story__img">
                         <figcaption class="story__caption">Mary Smith</figcaption>
                     </figure>
                     <div class="story__text">
@@ -232,7 +232,7 @@
             <div class="row">
                 <div class="story">
                     <figure class="story__shape">
-                        <img src="/images/nat-9.jpg" alt="Person on a tour" class="story__img">
+                        <img src="/natours-project/images/nat-9.jpg" alt="Person on a tour" class="story__img">
                         <figcaption class="story__caption">Jack Wilson</figcaption>
                     </figure>
                     <div class="story__text">
@@ -298,7 +298,7 @@
 
     <footer class="footer">
         <div class="footer__logo-box">
-            <img src="/images/logo-green-2x.png" alt="footer__logo">
+            <img src="/natours-project/images/logo-green-2x.png" alt="footer__logo">
         </div>
         <div class="row">
             <div class="col-1-of-2">
