--- a/natours-project/index.html
+++ b/natours-project/index.html
@@ -46,7 +46,7 @@
                 <span class="heading-primary--main">outdoors</span>
                 <span class="heading-primary--sub">is where life happens</span>
             </h1>
-            <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+            <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
     </header>
 
@@ -57,7 +57,7 @@
                     Exciting tours for adventurous people
                 </h2>
             </div>
-            <div class="row">
+            <div class="row"> 
                 <div class="col-1-of-2">
                     <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
                     <p class="paragraph">
@@ -120,7 +120,7 @@
             </div>
         </section>
 
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Most popular tours
@@ -152,7 +152,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$297</p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$497</p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -212,7 +212,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$897</p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -341,6 +341,24 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup" id="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="/natours-project/images/nat-8.jpg" alt="Tour Photo" class="popup__img">
+                <img src="/natours-project/images/nat-9.jpg" alt="Tour Photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
+                <h2 class="heading-secondary .u-margin-bottom-medium">Start booking now</h2>
+                <h3 class="heading-tertiary .u-margin-bottom-small">Important &ndash; Please read the terms before booking</h3>
+                <p class="popup__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium fusce id velit ut. Vestibulum lorem sed risus ultricies tristique nulla. Viverra maecenas accumsan lacus vel facilisis volutpat. Metus aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices. Facilisis gravida neque convallis a cras semper auctor neque vitae. Pellentesque nec nam aliquam sem et tortor consequat. Amet commodo nulla facilisi nullam vehicula. Dolor sed viverra ipsum nunc. Nulla facilisi etiam dignissim diam quis enim lobortis scelerisque.
+                </p>
+                <a href="#" class="btn btn--green">Book Now</a>
+            </div>
+        </div>
+    </div>
      
     <!-- <section class="grid-test">
         
